--- a/index.html
+++ b/index.html
@@ -31,6 +31,41 @@
       </div>
     </header>
 
+    <form action="">
+      <div class="computer">
+        <h2>Computer</h2>
+        <div class="computer-selection">
+          <p>🤜🏼</p>
+        </div>
+      </div>
+
+      <div class="winner-display">
+        <h1>Computer Wins</h1>
+      </div>
+
+      <div class="player">
+        <h2>Player</h2>
+        <div class="player-selection">
+          <p>🤜🏼</p>
+        </div>
+      </div>
+
+      <div class="player-buttons-container">
+        <div class="player-button">
+          <p>🤜🏼</p>
+          <h2>Rock</h2>
+        </div>
+        <div class="player-button">
+          <p>🖐🏻</p>
+          <h2>Paper</h2>
+        </div>
+        <div class="player-button">
+          <p>✌🏻</p>
+          <h2>Scissors</h2>
+        </div>
+      </div>
+    </form>
+
     <script src="app.js"></script>
   </body>
 </html>
