updated the game's font and some little stylings

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       href="./assets/game-logo.jpeg"
       type="image/x-icon"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <title>Rock-Paper-Scissors-Game</title>
   </head>
   <body>
