added hover effect on the game options

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="winner-display">
-        <h1>Computer Wins</h1>
+        <h1>Currently Draw</h1>
       </div>
 
       <div class="player">
